[gd_scene load_steps=7 format=3 uid="uid://f3m334m5trfi"]

[ext_resource type="Script" uid="uid://db7crsyowf6da" path="res://Scenes/controls_settings.gd" id="1_ip3fm"]
[ext_resource type="Texture2D" uid="uid://cnb65ac0kqje8" path="res://Textures/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Sprite sheet for Basic Pack.png" id="1_pbyiv"]
[ext_resource type="FontFile" uid="uid://s3pjimxs5hu3" path="res://Font/upheavtt.ttf" id="3_o1ge4"]

[sub_resource type="FontFile" id="FontFile_tahxn"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a24qc"]
texture = ExtResource("1_pbyiv")
region_rect = Rect2(275, 212, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_60jhc"]
texture = ExtResource("1_pbyiv")
region_rect = Rect2(275, 178, 90, 27)

[node name="ControlsSetting" type="Node2D"]
script = ExtResource("1_ip3fm")

[node name="ControlsSettingsScreenContainer" type="VBoxContainer" parent="."]
z_index = 4096
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ControlsSettingsScreen" type="MarginContainer" parent="ControlsSettingsScreenContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
texture = ExtResource("1_pbyiv")
region_rect = Rect2(461.038, 138.517, 4.24741, 4.93883)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 60
theme_override_constants/margin_bottom = 40

[node name="Title" type="Label" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_o1ge4")
theme_override_font_sizes/font_size = 96
text = "CONTROLS"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect/MarginContainer"]
custom_minimum_size = Vector2(1500, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="ControlsSettingsButtonsContainer" type="VBoxContainer" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="ControlsBackButtonContainer" type="HBoxContainer" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ControlsBackButton" type="Button" parent="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect/MarginContainer/ControlsBackButtonContainer"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontFile_tahxn")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_a24qc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a24qc")
theme_override_styles/normal = SubResource("StyleBoxTexture_60jhc")
text = "VALIDATE"

[connection signal="pressed" from="ControlsSettingsScreenContainer/ControlsSettingsScreen/NinePatchRect/MarginContainer/ControlsBackButtonContainer/ControlsBackButton" to="." method="_on_controls_back_button_pressed"]
